添加榛子云短信服务配置

--- a/后端/sotacy/src/main/resources/application.properties
+++ b/后端/sotacy/src/main/resources/application.properties
@@ -29,3 +29,14 @@ mybatis.type-aliases-package=cn.hzu.sotacy.mybatis.entity
 server.port=8080
 
 
+# 榛子云短信验证码配置
+spring.project.sms.apiUrl=https://sms_developer.zhenzikj.com
+spring.project.sms.appId=110278
+spring.project.sms.appSecret=YWRiZWRhY2MtNmEwMS00NjljLTk2YzUtM2ZlYmZhMDhhZGIw
+spring.project.sms.template-id=7164
+# 短信发送分钟间隔
+spring.project.sms.interval-min=1
+# 短信有效分钟
+spring.project.sms.timeOut=3
+# 短信有效长度
+spring.project.sms.codeLength=6
