--- a/前端/front_end/package.json
+++ b/前端/front_end/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "qs": "^6.10.2",
     "vue": "^2.6.11",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
